--- a/app/src/main/res/layout/item_footer1.xml
+++ b/app/src/main/res/layout/item_footer1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/refreshLayout"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="wrap_content"
     android:background="#00cc00"
     android:padding="15dp">
 
