--- a/app/src/main/res/layout/item_head1.xml
+++ b/app/src/main/res/layout/item_head1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/refreshLayout"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:background="#cc0000"
     android:padding="15dp">
 
