--- a/app/src/main/res/layout/item_footer.xml
+++ b/app/src/main/res/layout/item_footer.xml
@@ -5,12 +5,11 @@
     android:id="@+id/refreshLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#00cc00"
     android:padding="15dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:text="footer1" />
+        android:layout_gravity="center"
+        android:text="我是有底线的~~~" />
 </FrameLayout>
