--- a/app/src/main/res/layout/activity_load_more.xml
+++ b/app/src/main/res/layout/activity_load_more.xml
@@ -18,11 +18,12 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <ImageButton
-        android:id="@+id/btnInsert"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnClear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="20dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_delete" />
+
 </FrameLayout>
