--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
         android:layout_margin="10dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp">
@@ -18,7 +18,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Header" />
+            android:text="Header"
+            android:textSize="20sp" />
+
     </android.support.v7.widget.CardView>
 
 </FrameLayout>
