--- a/app/src/main/res/layout/activity_load_more.xml
+++ b/app/src/main/res/layout/activity_load_more.xml
@@ -26,4 +26,14 @@
         android:layout_margin="20dp"
         android:src="@mipmap/ic_delete" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="90dp"
+        android:src="@mipmap/ic_add" />
+
 </FrameLayout>
