增加分组列表和单选列表

--- a/app/src/main/res/layout/layout_list.xml
+++ b/app/src/main/res/layout/layout_list.xml
@@ -3,5 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recyclerView"
+    android:background="#ececec"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
